--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^18.3.1",
